--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -39,6 +39,7 @@ AUTOCONF = .\configure.txt
 #WITH_NSS=0
 #WITH_LIBXSLT=1
 #STATIC = 0
+#WITH_DL = 1
 #PREFIX = . # set this to the right value.
 #BINPREFIX = $(PREFIX)\bin
 #INCPREFIX = $(PREFIX)\include
@@ -49,29 +50,67 @@ AUTOCONF = .\configure.txt
 
 # There should never be a need to modify anything below this line.
 # ----------------------------------------------------------------
+
+#
+# Names of various input and output components.
+#
+!if "$(STATIC)" == "1"
+APP_NAME 		= xmlseca.exe
+!else
+APP_NAME 		= xmlsec.exe
+!endif
+
+XMLSEC_NAME 		= xmlsec
+XMLSEC_BASENAME 	= lib$(XMLSEC_NAME)
+XMLSEC_SO 		= $(XMLSEC_BASENAME).dll
+XMLSEC_IMP 		= $(XMLSEC_BASENAME).lib
+XMLSEC_A 		= $(XMLSEC_BASENAME)_a.lib
+
+XMLSEC_OPENSSL_NAME 	= $(XMLSEC_NAME)-openssl
+XMLSEC_OPENSSL_BASENAME = lib$(XMLSEC_OPENSSL_NAME)
+XMLSEC_OPENSSL_SO 	= $(XMLSEC_OPENSSL_BASENAME).dll
+XMLSEC_OPENSSL_IMP 	= $(XMLSEC_OPENSSL_BASENAME).lib
+XMLSEC_OPENSSL_A 	= $(XMLSEC_OPENSSL_BASENAME)_a.lib
+
+XMLSEC_NSS_NAME 	= $(XMLSEC_NAME)-nss
+XMLSEC_NSS_BASENAME 	= lib$(XMLSEC_NSS_NAME)
+XMLSEC_NSS_SO 		= $(XMLSEC_NSS_BASENAME).dll
+XMLSEC_NSS_IMP 		= $(XMLSEC_NSS_BASENAME).lib
+XMLSEC_NSS_A 		= $(XMLSEC_NSS_BASENAME)_a.lib
+
+#
 # Places where intermediate files produced by the compiler go
-XMLSEC_INTDIR           = $(XMLSEC_BASENAME).int
-XMLSEC_INTDIR_A         = $(XMLSEC_BASENAME)_a.int
-XMLSEC_OPENSSL_INTDIR   = $(XMLSEC_BASENAME)_openssl.int
-XMLSEC_OPENSSL_INTDIR_A = $(XMLSEC_BASENAME)_openssl_a.int
-XMLSEC_NSS_INTDIR       = $(XMLSEC_BASENAME)_nss.int
-XMLSEC_NSS_INTDIR_A     = $(XMLSEC_BASENAME)_nss_a.int
+#
 XMLSEC_APPS_INTDIR      = apps.int
 XMLSEC_APPS_INTDIR_A    = apps_a.int
 
-# xmlsec apps object files.
+XMLSEC_INTDIR           = $(XMLSEC_BASENAME).int
+XMLSEC_INTDIR_A         = $(XMLSEC_BASENAME)_a.int
+
+XMLSEC_OPENSSL_INTDIR   = $(XMLSEC_BASENAME)_openssl.int
+XMLSEC_OPENSSL_INTDIR_A = $(XMLSEC_BASENAME)_openssl_a.int
+
+XMLSEC_NSS_INTDIR       = $(XMLSEC_BASENAME)_nss.int
+XMLSEC_NSS_INTDIR_A     = $(XMLSEC_BASENAME)_nss_a.int
+
+#
+# Source folders
+#
+XMLSEC_OPENSSL_SRCDIR   = $(XMLSEC_SRCDIR)\openssl
+XMLSEC_NSS_SRCDIR   	= $(XMLSEC_SRCDIR)\nss
+
+#
+# Object files for libraries and apps.
+#
 XMLSEC_APPS_OBJS = \
 	$(XMLSEC_APPS_INTDIR)\crypto.obj\
 	$(XMLSEC_APPS_INTDIR)\cmdline.obj\
 	$(XMLSEC_APPS_INTDIR)\xmlsec.obj
-
-# static xmlsec apps object files.
 XMLSEC_APPS_OBJS_A = \
 	$(XMLSEC_APPS_INTDIR_A)\crypto.obj\
 	$(XMLSEC_APPS_INTDIR_A)\cmdline.obj\
 	$(XMLSEC_APPS_INTDIR_A)\xmlsec.obj
 
-# xmlsec object files.
 XMLSEC_OBJS = \
 	$(XMLSEC_INTDIR)\base64.obj\
 	$(XMLSEC_INTDIR)\buffer.obj \
@@ -99,8 +138,6 @@ XMLSEC_OBJS = \
 	$(XMLSEC_INTDIR)\xmltree.obj \
 	$(XMLSEC_INTDIR)\xpath.obj \
 	$(XMLSEC_INTDIR)\xslt.obj 
-
-# static xmlsec object files.
 XMLSEC_OBJS_A = \
 	$(XMLSEC_INTDIR_A)\base64.obj\
 	$(XMLSEC_INTDIR_A)\buffer.obj \
@@ -129,8 +166,6 @@ XMLSEC_OBJS_A = \
 	$(XMLSEC_INTDIR_A)\xpath.obj \
 	$(XMLSEC_INTDIR_A)\xslt.obj 
 
-
-# xmlsec-openssl object files.
 XMLSEC_OPENSSL_OBJS = \
 	$(XMLSEC_OPENSSL_INTDIR)\app.obj\
 	$(XMLSEC_OPENSSL_INTDIR)\bn.obj \
@@ -147,8 +182,6 @@ XMLSEC_OPENSSL_OBJS = \
 	$(XMLSEC_OPENSSL_INTDIR)\symkeys.obj \
 	$(XMLSEC_OPENSSL_INTDIR)\x509.obj \
 	$(XMLSEC_OPENSSL_INTDIR)\x509vfy.obj 
-
-# static xmlsec-openssl object files.
 XMLSEC_OPENSSL_OBJS_A = \
 	$(XMLSEC_OPENSSL_INTDIR_A)\app.obj\
 	$(XMLSEC_OPENSSL_INTDIR_A)\bn.obj \
@@ -166,7 +199,6 @@ XMLSEC_OPENSSL_OBJS_A = \
 	$(XMLSEC_OPENSSL_INTDIR_A)\x509.obj \
 	$(XMLSEC_OPENSSL_INTDIR_A)\x509vfy.obj 
 
-# xmlsec-nss object files.
 XMLSEC_NSS_OBJS = \
 	$(XMLSEC_NSS_INTDIR)\app.obj\
 	$(XMLSEC_NSS_INTDIR)\bignum.obj\
@@ -184,8 +216,6 @@ XMLSEC_NSS_OBJS = \
 	$(XMLSEC_NSS_INTDIR)\kw_des.obj\
 	$(XMLSEC_NSS_INTDIR)\kw_aes.obj\
 	$(XMLSEC_NSS_INTDIR)\strings.obj
-
-# static xmlsec-nss object files.
 XMLSEC_NSS_OBJS_A = \
 	$(XMLSEC_NSS_INTDIR_A)\app.obj\
 	$(XMLSEC_NSS_INTDIR_A)\bignum.obj\
@@ -204,11 +234,42 @@ XMLSEC_NSS_OBJS_A = \
 	$(XMLSEC_NSS_INTDIR_A)\kw_aes.obj\
 	$(XMLSEC_NSS_INTDIR_A)\strings.obj
 
-# source folders
-XMLSEC_OPENSSL_SRCDIR   = $(XMLSEC_SRCDIR)\openssl
-XMLSEC_NSS_SRCDIR   	= $(XMLSEC_SRCDIR)\nss
+#
+# The preprocessor and its options.
+#
+CPP 			= cl.exe /EP
+CPPFLAGS 		= /nologo
 
-# compilation cflags
+#
+# The compiler and its options.
+#
+CC 			= cl.exe
+CFLAGS 			= /nologo /D "WIN32" /D "_WINDOWS" 
+CFLAGS 			= $(CFLAGS) /D "_MBCS" /D "_REENTRANT"  /W1 /MD 
+CFLAGS 			= $(CFLAGS) /I$(BASEDIR) /I$(BASEDIR)\include
+CFLAGS 			= $(CFLAGS) /I$(INCPREFIX)
+CFLAGS 			= $(CFLAGS) /D PACKAGE="$(XMLSEC_NAME)" 
+
+# Optimisation and debug symbols.
+!if "$(DEBUG)" == "1"
+CFLAGS 			= $(CFLAGS) /D "_DEBUG" /Od /Z7
+!else
+CFLAGS 			= $(CFLAGS) /D "NDEBUG" /O2 
+!endif
+
+# configurable options
+!if "$(WITH_LIBXSLT)" == "1"
+!else 
+CFLAGS 			= $(CFLAGS) /DXMLSEC_NO_XSLT=1
+!endif
+
+!if "$(WITH_DL)" == "1"
+APP_CFLAGS		= $(APP_CFLAGS) /D "XMLSEC_CRYPTO_DYNAMIC_LOADING"
+!else
+APP_CFLAGS		= $(APP_CFLAGS) $(XMLSEC_CRYPTO_CFLAGS) 
+CFLAGS 			= $(CFLAGS) /D "XMLSEC_NO_CRYPTO_DYNAMIC_LOADING"
+!endif
+
 !if "$(WITH_OPENSSL_096)" == "1"
 XMLSEC_OPENSSL_CFLAGS   = /D "XMLSEC_OPENSSL_096"  /D "XMLSEC_CRYPTO_OPENSSL" /D "XMLSEC_CRYPTO=\"openssl\""
 !else
@@ -216,37 +277,59 @@ XMLSEC_OPENSSL_CFLAGS   = /D "XMLSEC_CRYPTO_OPENSSL" /D "XMLSEC_CRYPTO=\"openssl
 !endif
 XMLSEC_NSS_CFLAGS   	= /D "XMLSEC_CRYPTO_NSS" /D "XMLSEC_CRYPTO=\"nss\""
 
-# libs
+#
+# The linker and its options.
+#
+LD 			= link.exe
+LDFLAGS 		= /nologo 
+LDFLAGS 		= $(LDFLAGS) /LIBPATH:$(BINDIR) /LIBPATH:$(LIBPREFIX)
+LIBS 			= 
+
+# Optimisation and debug symbols.
+!if "$(DEBUG)" == "1"
+LDFLAGS 		= $(LDFLAGS) /DEBUG
+!else
+LDFLAGS 		= $(LDFLAGS) /OPT:NOWIN98
+!endif
+
+SOLIBS 			= $(LIBS) libxml2.lib 
+ALIBS 			= $(LIBS) libxml2_a.lib 
+
+!if "$(WITH_ICONV)" == "1"
+SOLIBS 			= $(SOLIBS) iconv.lib
+ALIBS 			= $(ALIBS) iconv_a.lib
+!endif
+
+!if "$(WITH_LIBXSLT)" == "1"
+SOLIBS 			= $(SOLIBS) libxslt.lib
+ALIBS 			= $(ALIBS) libxslt_a.lib
+!endif
+
+!if "$(STATIC)" == "1"
+APP_LIBS  		= $(ALIBS) $(XMLSEC_CRYPTO_ALIBS)
+!else
+APP_LIBS  		= $(SOLIBS) $(XMLSEC_CRYPTO_SOLIBS)
+!endif
+
+!if "$(WITH_DL)" == "1"
+!else
+!endif
+
 XMLSEC_OPENSSL_SOLIBS   = libeay32.lib wsock32.lib kernel32.lib user32.lib gdi32.lib
 XMLSEC_OPENSSL_ALIBS    = libeay32.lib wsock32.lib kernel32.lib user32.lib gdi32.lib
+
 XMLSEC_NSS_SOLIBS   	= smime3.lib ssl3.lib nss3.lib libnspr4.lib libplds4.lib libplc4.lib kernel32.lib user32.lib gdi32.lib
 XMLSEC_NSS_ALIBS    	= smime3.lib ssl3.lib nss3.lib libnspr4_s.lib libplds4_s.lib libplc4_s.lib kernel32.lib user32.lib gdi32.lib
 
-# Names of various input and output components.
-XMLSEC_NAME 		= xmlsec
-XMLSEC_BASENAME 	= lib$(XMLSEC_NAME)
-XMLSEC_SO 		= $(XMLSEC_BASENAME).dll
-XMLSEC_IMP 		= $(XMLSEC_BASENAME).lib
-XMLSEC_A 		= $(XMLSEC_BASENAME)_a.lib
 
-XMLSEC_OPENSSL_NAME 	= $(XMLSEC_NAME)-openssl
-XMLSEC_OPENSSL_BASENAME = lib$(XMLSEC_OPENSSL_NAME)
-XMLSEC_OPENSSL_SO 	= $(XMLSEC_OPENSSL_BASENAME).dll
-XMLSEC_OPENSSL_IMP 	= $(XMLSEC_OPENSSL_BASENAME).lib
-XMLSEC_OPENSSL_A 	= $(XMLSEC_OPENSSL_BASENAME)_a.lib
+# The archiver and its options.
+AR = lib.exe
+ARFLAGS = /nologo
 
-XMLSEC_NSS_NAME 	= $(XMLSEC_NAME)-nss
-XMLSEC_NSS_BASENAME 	= lib$(XMLSEC_NSS_NAME)
-XMLSEC_NSS_SO 		= $(XMLSEC_NSS_BASENAME).dll
-XMLSEC_NSS_IMP 		= $(XMLSEC_NSS_BASENAME).lib
-XMLSEC_NSS_A 		= $(XMLSEC_NSS_BASENAME)_a.lib
 
-# configurable options
-!if "$(WITH_LIBXSLT)" == "1"
-!else 
-CFLAGS = $(CFLAGS) /DXMLSEC_NO_XSLT=1
-!endif
-
+#
+# xmlsec-<default-crypto> options
+#
 !if "$(WITH_DEFAULT_CRYPTO)" == "openssl" 
 XMLSEC_CRYPTO          	= "openssl"
 XMLSEC_CRYPTO_CFLAGS   	= $(XMLSEC_OPENSSL_CFLAGS)
@@ -277,56 +360,9 @@ XMLSEC_CRYPTO_IMP	= $(XMLSEC_NSS_IMP)
 XMLSEC_CRYPTO_A		= $(XMLSEC_NSS_A)
 !endif
 
-
-# The preprocessor and its options.
-CPP = cl.exe /EP
-CPPFLAGS = /nologo
-
-# The compiler and its options.
-CC = cl.exe
-CFLAGS = /nologo /D "WIN32" /D "_WINDOWS" /D "_MBCS" /D "_REENTRANT"  /W1 /MD 
-CFLAGS = $(CFLAGS) /I$(BASEDIR) /I$(BASEDIR)\include
-CFLAGS = $(CFLAGS) /I$(INCPREFIX)
-CFLAGS = $(CFLAGS) /D PACKAGE="$(XMLSEC_NAME)" /D "XMLSEC_NO_CRYPTO_DYNAMIC_LOADING"
-
-# The linker and its options.
-LD = link.exe
-LDFLAGS = /nologo 
-LDFLAGS = $(LDFLAGS) /LIBPATH:$(BINDIR) /LIBPATH:$(LIBPREFIX)
-LIBS = 
-
-# The archiver and its options.
-AR = lib.exe
-ARFLAGS = /nologo
-
-# Optimisation and debug symbols.
-!if "$(DEBUG)" == "1"
-CFLAGS = $(CFLAGS) /D "_DEBUG" /Od /Z7
-LDFLAGS = $(LDFLAGS) /DEBUG
-!else
-CFLAGS = $(CFLAGS) /D "NDEBUG" /O2 
-LDFLAGS = $(LDFLAGS) /OPT:NOWIN98
-!endif
-
-SOLIBS = $(LIBS) libxml2.lib 
-ALIBS = $(LIBS) libxml2_a.lib 
-!if "$(WITH_ICONV)" == "1"
-SOLIBS = $(SOLIBS) iconv.lib
-ALIBS = $(ALIBS) iconv_a.lib
-!endif
-!if "$(WITH_LIBXSLT)" == "1"
-SOLIBS = $(SOLIBS) libxslt.lib
-ALIBS = $(ALIBS) libxslt_a.lib
-!endif
-
-# XmlSec and friends executables.
-!if "$(STATIC)" == "1"
-APP_NAME = xmlseca.exe
-APPLIBS  = $(ALIBS) $(XMLSEC_CRYPTO_ALIBS)
-!else
-APP_NAME = xmlsec.exe
-APPLIBS  = $(SOLIBS) $(XMLSEC_CRYPTO_SOLIBS)
-!endif
+#
+# Build rules
+#
 
 all : xmlsec xmlseca $(WITH_CRYPTO) apps 
 
@@ -411,51 +447,61 @@ bindist : all
 $(BINDIR) :
 	if not exist $(BINDIR) mkdir $(BINDIR)
 
+# Makes intermediate directories.
+$(XMLSEC_APPS_INTDIR) :
+	if not exist $(XMLSEC_APPS_INTDIR) mkdir $(XMLSEC_APPS_INTDIR)
+$(XMLSEC_APPS_INTDIR_A) :
+	if not exist $(XMLSEC_APPS_INTDIR_A) mkdir $(XMLSEC_APPS_INTDIR_A)
 
-# Makes the xmlsec intermediate directory.
 $(XMLSEC_INTDIR) :
 	if not exist $(XMLSEC_INTDIR) mkdir $(XMLSEC_INTDIR)
-
-# Makes the static xmlsec intermediate directory.
 $(XMLSEC_INTDIR_A) :
 	if not exist $(XMLSEC_INTDIR_A) mkdir $(XMLSEC_INTDIR_A)
 
-# Makes the xmlsec-crypto intermediate directories
 $(XMLSEC_OPENSSL_INTDIR) :
 	if not exist $(XMLSEC_OPENSSL_INTDIR) mkdir $(XMLSEC_OPENSSL_INTDIR)
 $(XMLSEC_OPENSSL_INTDIR_A) :
 	if not exist $(XMLSEC_OPENSSL_INTDIR_A) mkdir $(XMLSEC_OPENSSL_INTDIR_A)
+
 $(XMLSEC_NSS_INTDIR) :
 	if not exist $(XMLSEC_NSS_INTDIR) mkdir $(XMLSEC_NSS_INTDIR)
 $(XMLSEC_NSS_INTDIR_A) :
 	if not exist $(XMLSEC_NSS_INTDIR_A) mkdir $(XMLSEC_NSS_INTDIR_A)
 
+
 # An implicit rule for xmlsec compilation.
 {$(APPS_SRCDIR)}.c{$(XMLSEC_APPS_INTDIR)}.obj::
-	$(CC) $(CFLAGS) $(XMLSEC_CRYPTO_CFLAGS) /Fo$(XMLSEC_APPS_INTDIR)\ /c $<
+	$(CC) $(CFLAGS) $(APP_CFLAGS) /Fo$(XMLSEC_APPS_INTDIR)\ /c $<
+
 {$(XMLSEC_SRCDIR)}.c{$(XMLSEC_INTDIR)}.obj::
 	$(CC) $(CFLAGS) /Fo$(XMLSEC_INTDIR)\ /c $<
+
 {$(XMLSEC_SRCDIR)}.c{$(XMLSEC_OPENSSL_INTDIR)}.obj::
-	$(CC) $(CFLAGS) /Fo$(XMLSEC_OPENSSL_INTDIR)\ /c $<
+	$(CC) $(CFLAGS) $(XMLSEC_OPENSSL_CFLAGS) /Fo$(XMLSEC_OPENSSL_INTDIR)\ /c $<
 {$(XMLSEC_OPENSSL_SRCDIR)}.c{$(XMLSEC_OPENSSL_INTDIR)}.obj::
 	$(CC) $(CFLAGS) $(XMLSEC_OPENSSL_CFLAGS) /Fo$(XMLSEC_OPENSSL_INTDIR)\ /c $<
+
 {$(XMLSEC_SRCDIR)}.c{$(XMLSEC_NSS_INTDIR)}.obj::
 	$(CC) $(CFLAGS) $(XMLSEC_NSS_CFLAGS) /Fo$(XMLSEC_NSS_INTDIR)\ /c $<
 {$(XMLSEC_NSS_SRCDIR)}.c{$(XMLSEC_NSS_INTDIR)}.obj::
 	$(CC) $(CFLAGS) $(XMLSEC_NSS_CFLAGS) /Fo$(XMLSEC_NSS_INTDIR)\ /c $<
+
 # An implicit rule for static xmlsec compilation.
 {$(APPS_SRCDIR)}.c{$(XMLSEC_APPS_INTDIR_A)}.obj::
 	$(CC) /D "LIBXML_STATIC" /D "LIBXSLT_STATIC" /D "XMLSEC_STATIC" \
-		$(CFLAGS) $(XMLSEC_CRYPTO_CFLAGS) /Fo$(XMLSEC_APPS_INTDIR_A)\ /c $<
+		$(CFLAGS) $(APP_CFLAGS) /Fo$(XMLSEC_APPS_INTDIR_A)\ /c $<
+
 {$(XMLSEC_SRCDIR)}.c{$(XMLSEC_INTDIR_A)}.obj::
 	$(CC) /D "LIBXML_STATIC" /D "LIBXSLT_STATIC" /D "XMLSEC_STATIC" \
-		$(CFLAGS) $(XMLSEC_OPENSSL_CFLAGS) $(XMLSEC_CRYPTO_CFLAGS) /Fo$(XMLSEC_INTDIR_A)\ /c $<
+		$(CFLAGS) /Fo$(XMLSEC_INTDIR_A)\ /c $<
+
 {$(XMLSEC_SRCDIR)}.c{$(XMLSEC_OPENSSL_INTDIR_A)}.obj::
 	$(CC) /D "LIBXML_STATIC" /D "LIBXSLT_STATIC" /D "XMLSEC_STATIC" \
 		$(CFLAGS) $(XMLSEC_OPENSSL_CFLAGS) /Fo$(XMLSEC_OPENSSL_INTDIR_A)\ /c $<
 {$(XMLSEC_OPENSSL_SRCDIR)}.c{$(XMLSEC_OPENSSL_INTDIR_A)}.obj::
 	$(CC) /D "LIBXML_STATIC" /D "LIBXSLT_STATIC" /D "XMLSEC_STATIC" \
 		$(CFLAGS)  $(XMLSEC_OPENSSL_CFLAGS) /Fo$(XMLSEC_OPENSSL_INTDIR_A)\ /c $<
+
 {$(XMLSEC_SRCDIR)}.c{$(XMLSEC_NSS_INTDIR_A)}.obj::
 	$(CC) /D "LIBXML_STATIC" /D "LIBXSLT_STATIC" /D "XMLSEC_STATIC" \
 		$(CFLAGS) $(XMLSEC_NSS_CFLAGS) /Fo$(XMLSEC_NSS_INTDIR_A)\ /c $<
@@ -463,29 +509,25 @@ $(XMLSEC_NSS_INTDIR_A) :
 	$(CC) /D "LIBXML_STATIC" /D "LIBXSLT_STATIC" /D "XMLSEC_STATIC" \
 		$(CFLAGS) $(XMLSEC_NSS_CFLAGS) /Fo$(XMLSEC_NSS_INTDIR_A)\ /c $<
 
-# An implicit rule for strings file
+
 # Compiles xmlsec source. Uses the implicit rule for commands.
 $(XMLSEC_OBJS) : $(XMLSEC_INTDIR)
-
-# Compiles static xmlsec source. Uses the implicit rule for commands.
 $(XMLSEC_OBJS_A) : $(XMLSEC_INTDIR_A)
 
-# Compiles xmlsec-crypto source. Uses the implicit rule for commands.
 $(XMLSEC_OPENSSL_OBJS) : $(XMLSEC_OPENSSL_INTDIR)
 $(XMLSEC_OPENSSL_OBJS_A) : $(XMLSEC_OPENSSL_INTDIR_A)
+
 $(XMLSEC_NSS_OBJS) : $(XMLSEC_NSS_INTDIR)
 $(XMLSEC_NSS_OBJS_A) : $(XMLSEC_NSS_INTDIR_A)
-# Creates the xmlsec shared object.
+
+# Creates the shared objects and archives.
 $(BINDIR)\$(XMLSEC_SO) : $(BINDIR) $(XMLSEC_OBJS)
 	$(LD) $(LDFLAGS) /DLL /VERSION:$(XMLSEC_VERSION_MAJOR).$(XMLSEC_VERSION_MINOR) \
 		/IMPLIB:$(BINDIR)\$(XMLSEC_IMP) /OUT:$(BINDIR)\$(XMLSEC_SO) \
 		$(XMLSEC_OBJS) $(SOLIBS)
-
-# Creates the xmlsec archive.
 $(BINDIR)\$(XMLSEC_A) : $(BINDIR) $(XMLSEC_OBJS_A)
 	$(AR) $(ARFLAGS) /OUT:$(BINDIR)\$(XMLSEC_A) $(XMLSEC_OBJS_A)
 
-# Creates the xmlsec-crypto shared object and archive.
 $(BINDIR)\$(XMLSEC_OPENSSL_SO) : $(BINDIR) $(XMLSEC_OPENSSL_OBJS)
 	$(LD) $(LDFLAGS) /DLL /VERSION:$(XMLSEC_VERSION_MAJOR).$(XMLSEC_VERSION_MINOR) \
 		/IMPLIB:$(BINDIR)\$(XMLSEC_OPENSSL_IMP) /OUT:$(BINDIR)\$(XMLSEC_OPENSSL_SO) \
@@ -500,18 +542,12 @@ $(BINDIR)\$(XMLSEC_NSS_SO) : $(BINDIR) $(XMLSEC_NSS_OBJS)
 $(BINDIR)\$(XMLSEC_NSS_A) : $(BINDIR) $(XMLSEC_NSS_OBJS_A)
 	$(AR) $(ARFLAGS) /OUT:$(BINDIR)\$(XMLSEC_NSS_A) $(XMLSEC_NSS_OBJS_A)
 
-# Creates the apps intermediate directory.
-$(XMLSEC_APPS_INTDIR) :
-	if not exist $(XMLSEC_APPS_INTDIR) mkdir $(XMLSEC_APPS_INTDIR)
-$(XMLSEC_APPS_INTDIR_A) :
-	if not exist $(XMLSEC_APPS_INTDIR_A) mkdir $(XMLSEC_APPS_INTDIR_A)
 
-# An implicit rule for xmlsec and friends.
+# An implicit rule for xmlsec command line tool
 $(BINDIR)\xmlseca.exe: $(BINDIR) $(XMLSEC_APPS_OBJS_A)
-	$(LD) $(LDFLAGS) /OUT:$@ $(XMLSEC_A) $(XMLSEC_CRYPTO_A) $(APPLIBS) $(XMLSEC_APPS_OBJS_A)
-
+	$(LD) $(LDFLAGS) /OUT:$@ $(XMLSEC_A) $(XMLSEC_CRYPTO_A) $(APP_LIBS) $(XMLSEC_APPS_OBJS_A)
 $(BINDIR)\xmlsec.exe: $(BINDIR) $(XMLSEC_APPS_OBJS)
-	$(LD) $(LDFLAGS) /OUT:$@ $(XMLSEC_IMP) $(XMLSEC_CRYPTO_IMP) $(APPLIBS) $(XMLSEC_APPS_OBJS)
+	$(LD) $(LDFLAGS) /OUT:$@ $(XMLSEC_IMP) $(XMLSEC_CRYPTO_IMP) $(APP_LIBS) $(XMLSEC_APPS_OBJS)
 
 # Builds xmlsec and friends. Uses the implicit rule for commands.
 $(BINDIR)\$(APP_NAME) : $(BINDIR) xmlsec xmlseca
