minor config fixes

--- a/configure.in
+++ b/configure.in
@@ -231,7 +231,7 @@ XMLSEC_NO_OPENSSL="1"
 OPENSSL_MIN_VERSION="0.9.6"
 OPENSSL_VERSION=""
 OPENSSL_PREFIX=""
-OPENSSL_CFLAGS="-DXMLSEC_CRYPTO=\\\"openssl\\\" -DXMLSEC_CRYPTO_OPENSSL=1"
+OPENSSL_CFLAGS="-DXMLSEC_CRYPTO_OPENSSL=1"
 OPENSSL_LIBS=""
 OPENSSL_LDADDS=""
 OPENSSL_CRYPTO_LIB="$PACKAGE-openssl"
@@ -342,7 +342,7 @@ XMLSEC_NO_GNUTLS="1"
 GNUTLS_MIN_VERSION="0.8.1"
 GNUTLS_VERSION=""
 GNUTLS_PREFIX=""
-GNUTLS_CFLAGS="-DXMLSEC_CRYPTO=\\\"gnutls\\\" -DXMLSEC_CRYPTO_GNUTLS=1"
+GNUTLS_CFLAGS="-DXMLSEC_CRYPTO_GNUTLS=1"
 GNUTLS_LIBS=""
 GNUTLS_LDADDS=""
 GNUTLS_CRYPTO_LIB="$PACKAGE-gnutls"
@@ -425,7 +425,7 @@ XMLSEC_NO_NSS="1"
 NSS_MIN_VERSION="3.2"
 MOZILLA_MIN_VERSION="1.4"
 NSS_VERSION=""
-NSS_CFLAGS="-DXMLSEC_CRYPTO=\\\"nss\\\" -DXMLSEC_CRYPTO_NSS=1"
+NSS_CFLAGS="-DXMLSEC_CRYPTO_NSS=1"
 NSS_LIBS=""
 NSS_LDADDS=""
 NSS_PREFIX=""
