--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -124,6 +124,7 @@ XMLSEC_APPS_OBJS_A = \
 	$(XMLSEC_APPS_INTDIR_A)\xmlsec.obj
 
 XMLSEC_OBJS = \
+	$(XMLSEC_INTDIR)\app.obj\
 	$(XMLSEC_INTDIR)\base64.obj\
 	$(XMLSEC_INTDIR)\buffer.obj \
 	$(XMLSEC_INTDIR)\c14n.obj \
@@ -151,6 +152,7 @@ XMLSEC_OBJS = \
 	$(XMLSEC_INTDIR)\xpath.obj \
 	$(XMLSEC_INTDIR)\xslt.obj 
 XMLSEC_OBJS_A = \
+	$(XMLSEC_INTDIR_A)\app.obj\
 	$(XMLSEC_INTDIR_A)\base64.obj\
 	$(XMLSEC_INTDIR_A)\buffer.obj \
 	$(XMLSEC_INTDIR_A)\c14n.obj \
@@ -289,7 +291,7 @@ CFLAGS 			= /nologo /D "WIN32" /D "_WINDOWS"
 CFLAGS 			= $(CFLAGS) /D "_MBCS" /D "_REENTRANT"  /W1 /MD 
 CFLAGS 			= $(CFLAGS) /I$(BASEDIR) /I$(BASEDIR)\include
 CFLAGS 			= $(CFLAGS) /I$(INCPREFIX)
-CFLAGS 			= $(CFLAGS) /D PACKAGE="$(XMLSEC_NAME)" 
+CFLAGS 			= $(CFLAGS) /D PACKAGE=\"$(XMLSEC_NAME)\" 
 
 # TODO: XKMS is not really implemented yet
 CFLAGS 			= $(CFLAGS) /D "XMLSEC_NO_XKMS"
@@ -307,6 +309,7 @@ CFLAGS 			= $(CFLAGS) /D "NDEBUG" /O2
 CFLAGS 			= $(CFLAGS) /DXMLSEC_NO_XSLT=1
 !endif
 
+APP_CFLAGS		= /D "XMLSEC_CRYPTO=\"$(XMLSEC_CRYPTO)\""
 !if "$(WITH_DL)" == "1"
 APP_CFLAGS		= $(APP_CFLAGS) /D "XMLSEC_CRYPTO_DYNAMIC_LOADING"
 !else
