patch #3 for MS Crypto from Wouter

--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -250,6 +250,7 @@ XMLSEC_NSS_OBJS_A = \
 
 XMLSEC_MSCRYPTO_OBJS = \
 	$(XMLSEC_MSCRYPTO_INTDIR)\app.obj\
+	$(XMLSEC_MSCRYPTO_INTDIR)\bignum.obj \
 	$(XMLSEC_MSCRYPTO_INTDIR)\crypto.obj \
 	$(XMLSEC_MSCRYPTO_INTDIR)\ciphers.obj \
 	$(XMLSEC_MSCRYPTO_INTDIR)\digests.obj \
@@ -264,6 +265,7 @@ XMLSEC_MSCRYPTO_OBJS = \
 	$(XMLSEC_MSCRYPTO_INTDIR)\x509vfy.obj
 XMLSEC_MSCRYPTO_OBJS_A = \
 	$(XMLSEC_MSCRYPTO_INTDIR_A)\app.obj\
+	$(XMLSEC_MSCRYPTO_INTDIR_A)\bignum.obj \
 	$(XMLSEC_MSCRYPTO_INTDIR_A)\crypto.obj \
 	$(XMLSEC_MSCRYPTO_INTDIR_A)\ciphers.obj \
 	$(XMLSEC_MSCRYPTO_INTDIR_A)\digests.obj \
