--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -180,6 +180,11 @@ XMLSEC_OBJS_A = \
 	$(XMLSEC_INTDIR_A)\xpath.obj \
 	$(XMLSEC_INTDIR_A)\xslt.obj 
 
+!if "$(WITH_DL)" == "1"
+XMLSEC_OBJS 	= $(XMLSEC_OBJS) $(XMLSEC_INTDIR)\xmlsec-ltdl.obj
+XMLSEC_OBJS_A 	= $(XMLSEC_OBJS_A) $(XMLSEC_INTDIR_A)\xmlsec-ltdl.obj
+!endif 
+
 XMLSEC_OPENSSL_OBJS = \
 	$(XMLSEC_OPENSSL_INTDIR)\app.obj\
 	$(XMLSEC_OPENSSL_INTDIR)\bn.obj \
@@ -294,6 +299,9 @@ CFLAGS 			= $(CFLAGS) /D "_MBCS" /D "_REENTRANT"  /W1 /MD
 CFLAGS 			= $(CFLAGS) /I$(BASEDIR) /I$(BASEDIR)\include
 CFLAGS 			= $(CFLAGS) /I$(INCPREFIX)
 CFLAGS 			= $(CFLAGS) /D PACKAGE=\"$(XMLSEC_NAME)\" 
+CFLAGS 			= $(CFLAGS) /D "HAVE_STDIO_H" /D "HAVE_STDLIB_H"
+CFLAGS 			= $(CFLAGS) /D "HAVE_STRING_H" /D "HAVE_CTYPE_H"
+CFLAGS 			= $(CFLAGS) /D "HAVE_MALLOC_H" /D "HAVE_MEMORY_H"
 
 # TODO: XKMS is not really implemented yet
 CFLAGS 			= $(CFLAGS) /D "XMLSEC_NO_XKMS"
@@ -313,10 +321,11 @@ CFLAGS 			= $(CFLAGS) /DXMLSEC_NO_XSLT=1
 
 APP_CFLAGS		= /D "XMLSEC_CRYPTO=\"$(XMLSEC_CRYPTO)\""
 !if "$(WITH_DL)" == "1"
+CFLAGS 			= $(CFLAGS) /D LTDL_OBJDIR=\"\" /D LTDL_SHLIB_EXT=\".dll\"
 APP_CFLAGS		= $(APP_CFLAGS) /D "XMLSEC_CRYPTO_DYNAMIC_LOADING"
 !else
-APP_CFLAGS		= $(APP_CFLAGS) $(XMLSEC_CRYPTO_CFLAGS) 
 CFLAGS 			= $(CFLAGS) /D "XMLSEC_NO_CRYPTO_DYNAMIC_LOADING"
+APP_CFLAGS		= $(APP_CFLAGS) $(XMLSEC_CRYPTO_CFLAGS) 
 !endif
 
 !if "$(WITH_OPENSSL_096)" == "1"
